# mangaupdates-webscraper

./: LICENSE  README.md  pyproject.toml
tests/: test_mangaupdates_webscraper.py
