[tool.poetry]
name = "mangaupdates_webscraper"
version = "0.1.0"
description = "Parses MangaUpdates to collect data on completed manga."
authors = ["Jason Zhen <jasonzhen.mail@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
